--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -19,8 +19,8 @@
   background: transparent;
   letter-spacing: .5px;
 
-  font: 19px/normal helvetica, arial, sans-serif;
-  letter-spacing: -0.05em;
+  font: 19px/20px helvetica, arial, sans-serif;
+  letter-spacing: -0.055em;
   font-weight: bold;
   color: #BF6300;
   }
