--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -90,8 +90,9 @@ h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3, #bl
 
 .taxonomy-term-child h3 {
   color: #CC6733;
-  font-size: 24px;
+  font-size: 1.4em;
   background: #fff;
+  padding-bottom: .4em;
   }
 
 .taxonomy-term-child .taxonomy-term-child h3 {
@@ -101,6 +102,10 @@ h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3, #bl
   margin-right: 0;
   margin-bottom: 0;
   margin-top: .5em;
+  }
+
+.block h3.title {
+  font-size: 1.3em;
   }
 
 #content .node h3.title {
@@ -205,11 +210,10 @@ a:hover {
   /*-moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   */
-  padding: 0 16px 16px 16px;
+  padding: 0 26px 26px 26px;
   border:1px solid #d7d7d7;
   background: #fff;
   }
-
 
 /*
 
@@ -434,8 +438,8 @@ body.header-right-main #header-wrapper {
 
 .page-home #header-wrapper .region-count-2 {
   float: right;
-  width: 227px;
-  height: 229px;
+  width: 207px;
+  height: 219px;
   overflow: auto;
   }
 
