--- a/sites/all/themes/openscholar/scholar_base/toggle-slider.css
+++ b/sites/all/themes/openscholar/scholar_base/toggle-slider.css
@@ -18,13 +18,13 @@
   }
 
 .toggle {
-  background: url(images/show-menu.png) 100% .4em no-repeat transparent;
-  padding-right: 3em;
+  background: url(images/show-menu.png) 100% 0 no-repeat transparent;
+  padding-right: 2.5em;
   }
 
 .toggle.expanded {
   background-color:#eef3fb;
-  background-position: 100% -1.4em;
+  background-position: 100% -17px;
   }
 
 
