--- a/sites/all/themes/custom/gking/gking-ie.css
+++ b/sites/all/themes/custom/gking/gking-ie.css
@@ -1,3 +1,6 @@
-body.two-sidebars #sidebar-left {
-	left: 364px; /* Total width, including padding of right col */
-	}
+#block-iqss_gking-areas_of_research div.bg {
+  background: transparent;
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#E0FEFEE6,endColorstr=#E0FEFEE6)"; /* IE8 */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#E0FEFEE6,endColorstr=#E0FEFEE6);   /* IE6 & 7 */
+      zoom: 1;
+}
