make the home text readable and use drupal teaser crop

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -84,6 +84,7 @@
 #block-iqss_gking-areas_of_research dd {
   background: #fbfee8;
   border: 1px solid #ddd;
+  line-height: 1.3em;
   }
 
 #block-iqss_gking-areas_of_research .col dt {
