fix to thedata theme

--- a/sites/all/themes/custom/thedata/thedata.css
+++ b/sites/all/themes/custom/thedata/thedata.css
@@ -16,7 +16,7 @@ body.header-main #header-main {
 	padding-bottom: 0;
 	}
 
-#content-wrapper {
+#container {
 	background: transparent url(images/container.png) repeat-y 0 0;
 	}
 
