block name has changed

--- a/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
+++ b/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
@@ -76,27 +76,27 @@ a img {
 	}
 
 #header-main,
-#block-scholar-1 h1,
-#block-scholar-1 h2,
-#block-scholar-1 p {
+#block-scholar_project-1 h1,
+#block-scholar_project-1 h2,
+#block-scholar_project-1 p {
   text-indent: -999em;
   margin:0 !important;
   padding: 0 !important;
   }
 
-#block-scholar-project-1 h2, #block-scholar-project-1 p {
+#block-scholar_project-1 h2, #block-scholar_project-1 p {
   height: 1px;
   border: none !important
   }
 
-#block-scholar-project-1 h1 {
+#block-scholar_project-1 h1 {
   background: url('images/banner_writing.png') 0 0 no-repeat #950000;
   width: 904px;
   height:169px;
   text-indent: -999em;
   }
 
-#block-scholar-project-1 h1 a, #block-scholar-project-1 h1 a:visited {
+#block-scholar_project-1 h1 a, #block-scholar_project-1 h1 a:visited {
   display:block;
   width: 904px;
   height:171px;
