--- a/sites/all/themes/openscholar/scholar_base/tabs.css
+++ b/sites/all/themes/openscholar/scholar_base/tabs.css
@@ -8,38 +8,30 @@
 
 /* Primary */
 .tabs ul.primary {
-  clear: both;
-  float: left;
-  margin: 0;
-  padding: 0 10px;
-}
-
-.tabs ul.primary {
   margin: 0 0 20px 0;
   padding: 0;
   width: 100%;
-}
+  height: 1.4em;
+  }
 
 .tabs ul.primary li {
   border-style: none;
-  display: inline;
   float: left;
   list-style: none;
   margin: 0 1px 0 0;
   padding: 0;
-}
+  }
 
 .tabs ul.primary li a:link,
 .tabs ul.primary li a:visited {
   background-color: transparent;
   border: none;
-  float: left;
   font-weight: bold;
   margin: 0;
   padding: 0 0 6px 0;
   text-decoration: none;
   white-space: nowrap;
-}
+  }
 
 .tabs ul.primary li a:link,
 .tabs ul.primary li a:visited {
