new design for gary site front

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -1,151 +1,117 @@
-#block-iqss_gking-areas_of_research {
-  background:#fff;
-  position: relative;
-  height: 275px;
-  background: url(images/research-block.png) no-repeat 0 0 #fff;
-  clear:both;
-  padding: 0;
-  z-index:1;
-  font-size: 14px;
-  line-height: normal;
-  }
-
-#block-iqss_gking-areas_of_research h3,
-#block-iqss_gking-areas_of_research h4 {
-  font: 25px/normal 'LeagueGothicRegular', sans-serif;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background: transparent;
-  letter-spacing: .5px;
-
-  font: 19px/20px helvetica, arial, sans-serif;
-  letter-spacing: -0.055em;
-  font-weight: bold;
-  color: #BF6300;
-  }
+  #block-iqss_gking-areas_of_research {
+    width:100%;
+    position: relative;
+    font:14px/18px helvetica, arial, sans-serif;
+    padding:13px 0 15px 0;
+    background: #333333;
+    border:1px solid #000;
+    color: #fff;
+    height:290px;
+    clear:both;
+    z-index:1;
+    font-size: 14px;
+    line-height: normal;
+    }
 
 #block-iqss_gking-areas_of_research h3 {
-  background: url("images/connector.png") no-repeat 234px 40% transparent;
-  color: #444;
+  padding:3px 49px;
+  margin: 0;
+  color: #fff;
+  background: url(images/black-arrow.png) 291px 50% no-repeat transparent;
+  border:none;
+  color:#ff8202;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
   }
 
-#block-iqss_gking-areas_of_research #methods h4 {
+#block-iqss_gking-areas_of_research h4 {
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: .5em;
+  margin-top: 1.3em;
+  color: #f6f6d0;
   position: relative;
-  left: 157px;
-  top:-10px;
+  left: 168px;
+  top:-31px;
   margin-bottom: 0;
   width: 100px;
+  font-weight: normal;
+  color: #fff;
   }
 
 #block-iqss_gking-areas_of_research .col {
-  width: 369px;
-  clear: left;
-  float: left;
-  }
-
-#block-iqss_gking-areas_of_research dt span {
-  display:block;
-  height: 23px;
-  }
-
-#block-iqss_gking-areas_of_research dt {
- list-style: none;
- padding: 0;
- margin: 0;
- font-weight:bold;
- /*cursor:pointer;*/
- float: left;
- clear:left;
- height: 23px;
- }
-
-#block-iqss_gking-areas_of_research h3,
-#block-iqss_gking-areas_of_research #methods {
-  margin-left: 251px;
-  margin-top: 16px;
+  margin-top:-15px;
   }
 
 #block-iqss_gking-areas_of_research #methods {
-  margin-top: -10px;
-  }
+    width:334px;
+    float:left;
+    text-align: right;
+    }
 
 #block-iqss_gking-areas_of_research #applications {
-  clear:none;
-  margin-top: -20px;
-  margin-right: 0;
-  width: 362px;
-  }
-
-#block-iqss_gking-areas_of_research #applications h4 {
-  margin-bottom: 10px;
-  }
+    float: right;
+    width:393px;
+    }
 
 #block-iqss_gking-areas_of_research dd {
-  background: #fbfee8;
-  border: 1px solid #ddd;
-  line-height: 1.3em;
+    position:absolute;
+    display:none;
+    width:208px;
+    min-height: 184px;
+    padding: 14px 24px;
+    border: 1px solid #db7002;
+    left:334px;
+    top: 61px;
+    background: #333;
+    text-align: left;
+    line-height:1.35em;
+    -moz-box-shadow: 0 0 1em #000;
+    box-shadow: 0 0 1em #000;
+    }
+
+#block-iqss_gking-areas_of_research dt {
+    position:relative;
+    font-weight: bold;
+    line-height: 22px;
+    }
+
+#block-iqss_gking-areas_of_research #methods dt span,
+#block-iqss_gking-areas_of_research #methods h4 {
+  margin-right: 63px;
   }
 
-#block-iqss_gking-areas_of_research .col dt {
-  position: relative;
-  z-index: 3;
+#block-iqss_gking-areas_of_research #applications dt,
+#block-iqss_gking-areas_of_research #applications h4 {
+  padding-left:63px;
+  left: 0;
   }
 
-#block-iqss_gking-areas_of_research div.bg {
-  background:rgba(254,254,230,.88);
-  position: absolute;
-  top: -6px;
-  bottom: 3px;
-  right: -.8em;
-  left: -12px;
-  display:none;
-  z-index:-2;
-  -moz-border-radius: 0 15px 15px 0;
-  -webkit-border-radius: 0 15px 15px 0;
-  border: 1px solid #ddd;
-  border-left-color:#fbfee8;
-  }
-
-#block-iqss_gking-areas_of_research #applications div.bg {
-  left:-379px;
-  }
-
-#block-iqss_gking-areas_of_research dt.active div.bg {
+#block-iqss_gking-areas_of_research #applications dt span {
   display:block;
   }
 
-#block-iqss_gking-areas_of_research #blurb-contain {
-  width: 221px;
-  height: 276px;
-  position: absolute;
-  left: 20px;
-  top:10px;
+#block-iqss_gking-areas_of_research dt.active {
+  background: url('images/line.png') no-repeat -341px 50% #333;
   }
 
-#block-iqss_gking-areas_of_research dd {
-  position:absolute;
-  font-weight:normal;
-  width: 205px;
-  padding: 20px 12px;
-  margin:0;
-  left:11px;
-  top:10px;
-  display:none;
-  z-index:0;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  min-height:203px;
+#block-iqss_gking-areas_of_research #methods dt.active {
+  background-position: 276px 50%;
   }
 
-#block-iqss_gking-areas_of_research .more {
-  display:none;
-  color: #0fbbb5;
-  padding-left: 0;
-  background-image: url(images/arrow-aqua.png);
+#block-iqss_gking-areas_of_research dt.active span {
+  background: #333;
   }
 
-#block-iqss_gking-areas_of_research .more:hover {
-  color: #007F79;
-  text-decoration: underline;
+#block-iqss_gking-areas_of_research dt span a, #block-iqss_gking-areas_of_research dt span a:visited {
+  color: #fff;
+  }
+
+#block-iqss_gking-areas_of_research dt span a:hover {
+  text-decoration: none;
+  }
+
+#block-iqss_gking-areas_of_research dt.active a {
+  color:#e87702;
   }
