changes to gary site

--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -174,7 +174,7 @@ ol {
   padding:0 0 0 3px;
   }
 
-#content .node .terms ul, #content .node ul.links {
+#content .node .terms ul, #content .node ul.links, #content .biblio-entry ul.links {
   padding-left: 0;
   margin-top:0;
   }
@@ -226,7 +226,7 @@ ul.links li {
   }
 
 
-ul.links li a, ul.links li a:visited {
+ul.links li a, ul.links li a:visited, span.disto-toggle {
   text-decoration: none;
   padding: 1px 0 1px 3px;
   font: normal 11px/normal "Lucida Grande","Lucida Sans Unicode", Arial,  Verdana,sans-serif;
@@ -234,7 +234,7 @@ ul.links li a, ul.links li a:visited {
   background: transparent;
   }
 
-ul.links li a:hover {
+ul.links li a:hover, span.disto-toggle:hover {
   text-decoration: underline;
   color: #228822;
   }
