--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -1,53 +1,46 @@
-  #block-iqss_gking-areas_of_research {
-    width:100%;
-    position: relative;
-    font:14px/18px helvetica, arial, sans-serif;
-    padding:13px 0 15px 0;
-    background: #333333;
-    border:1px solid #000;
-    color: #fff;
-    height:290px;
-    clear:both;
-    z-index:1;
-    font-size: 14px;
-    line-height: normal;
-    }
+#block-iqss_gking-areas_of_research {
+  width:100%;
+  position: relative;
+  font:14px/18px helvetica, arial, sans-serif;
+  padding:13px 0 15px 0;
+  border:1px solid #000;
+  background: #333;
+  color: #fff;
+  height:290px;
+  clear:both;
+  z-index:1;
+  font-size: 14px;
+  line-height: normal;
+  }
 
-#block-iqss_gking-areas_of_research h3 {
-  padding:3px 49px;
+#block-iqss_gking-areas_of_research h3.title, #block-iqss_gking-areas_of_research h4 {
+  font-weight: normal;
+  font:18px/25px helvetica, arial, sans-serif;
+  margin: 0;
+  background: transparent;
+  }
+
+#block-iqss_gking-areas_of_research h3.title {
+  padding:0 20px 0 49px;
   margin: 0;
   color: #fff;
-  background: url(images/black-arrow.png) 291px 50% no-repeat transparent;
   border:none;
   color:#ff8202;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
+  background: url(images/black-arrow.png) 291px 50% no-repeat #333;
   }
 
 #block-iqss_gking-areas_of_research h4 {
-  font-size: 18px;
-  line-height: 21px;
-  margin-bottom: .5em;
-  margin-top: 1.3em;
   color: #f6f6d0;
   position: relative;
-  left: 168px;
-  top:-31px;
-  margin-bottom: 0;
-  width: 100px;
-  font-weight: normal;
   color: #fff;
-  }
-
-#block-iqss_gking-areas_of_research .col {
-  margin-top:-15px;
+  margin-bottom:0;
+  top: -25px;
   }
 
 #block-iqss_gking-areas_of_research #methods {
     width:334px;
-    float:left;
     text-align: right;
+    float: left;;
     }
 
 #block-iqss_gking-areas_of_research #applications {
@@ -63,12 +56,10 @@
     padding: 14px 24px;
     border: 1px solid #db7002;
     left:334px;
-    top: 61px;
+    top: 57px;
     background: #333;
     text-align: left;
     line-height:1.35em;
-    -moz-box-shadow: 0 0 1em #000;
-    box-shadow: 0 0 1em #000;
     }
 
 #block-iqss_gking-areas_of_research dt {
