--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -11,14 +11,6 @@ body {
 /* TYPOGRAPHY */
 
 @font-face {
-  font-family: 'LeagueGothicRegular';
-  src: url('fonts/League_Gothic-webfont.eot');
-  src: local('☺'), url('fonts/League_Gothic-webfont.woff') format('woff'), url('fonts/League_Gothic-webfont.ttf') format('truetype'), url('fonts/League_Gothic-webfont.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  }
-
-@font-face {
 	font-family: 'ExpresswayRgRegular';
 	src: url('fonts/expressway_rg-webfont.eot');
 	src: local('☺'), url('fonts/expressway_rg-webfont.woff') format('woff'), url('fonts/expressway_rg-webfont.ttf') format('truetype'), url('fonts/expressway_rg-webfont.svg#webfont') format('svg');
@@ -59,25 +51,12 @@ h4 {
   }
 
 h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3, #block-vsite_menus-1 li {
-  line-height: 1em;
-  margin-top: 0;
-  margin-bottom: .5em;
-  margin-left: -16px;
-  margin-right: -16px;
-  padding: 16px;
-  padding-top: 13px;
+  margin: 0 -16px .5em -16px;
+  padding: 13px 16px 16px 16px;
   background: #fcfcfc;
   border-bottom:1px solid #e5e5e5;
-  font-weight: normal;
-  font-family: 'LeagueGothicRegular', sans-serif;
-  font-size:27px;
-  letter-spacing: 0;
-
-  font-family: arial, helvetica, sans-serif;
-  font-size:1.846em;
-  font-weight:bold;
+  font: bold 1.846em/24px arial, helvetica, sans-serif;
   letter-spacing:-0.05em;
-  line-height:24px;
   text-indent:-1px;
   }
 
