--- a/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
+++ b/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
@@ -34,14 +34,13 @@ h2, h3 {
 	margin: 32px 0 16px 0;
 	color: #666666;
 	padding-top: 6px;
-	border: 1px solid #B3C4C2;
+	border-top: 1px solid #B3C4C2;
 	}
 
 h3 {
 	color:  #B00921;
 	margin-bottom: -4px;
 	padding-top: 0;
-	padding-left: 20px;
 	border: none;
 	}
 
@@ -50,7 +49,6 @@ h4 {
 	line-height: 16px;
 	margin-top: 32px;
 	margin-bottom: -4px;
-	padding-left: 20px;
 	}
 
 p {
