cite distribute stuff

--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -522,6 +522,10 @@ body.admin-menu.section-home #content-wrapper {
   color: #fff;
   }
 
+#content-row-3 li a:after {
+  content: '.';
+  }
+
 #content-row-3 li a, #content-row-3 li a:visited {
   color: #abd407;
   text-decoration: none;
