--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -234,6 +234,10 @@ ul.links li a, ul.links li a:visited, span.disto-toggle {
   background: transparent;
   }
 
+span.disto-toggle {
+  cursor: pointer;
+  }
+
 ul.links li a:hover, span.disto-toggle:hover {
   text-decoration: underline;
   color: #228822;
