more to ul.links

--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -225,6 +225,14 @@ ul.links li {
   padding: 0;
   }
 
+.node ul.links li, .biblio-entry ul.links li {
+  padding-right: .5em;
+  border-right:1px solid #ccc;
+  }
+
+.node ul.links li.last, .biblio-entry ul.links li.last {
+  border: none;
+  }
 
 ul.links li a, ul.links li a:visited, span.disto-toggle {
   text-decoration: none;
