minor font changes

--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -5,7 +5,7 @@
 
 body {
   background: #FFF;
-  font: .9em/1.5em arial, helvetica, sans-serif;
+  font: .85em/1.5em arial, helvetica, sans-serif;
   }
 
 #tinymce {
@@ -49,22 +49,26 @@ body.admin-menu {
 
 .flL {
   float:left;
-  margin: 0 .5em .5em 0;
+  margin: 0 1.5em .5em 0;
   }
 
 .flR {
   float: right;
-  margin: 0 0 .5em .5em;
+  margin: 0 0 .5em 1.5em;
   }
 
 .clear {
   clear:both;
   }
 
+.center {
+  text-align: center;
+  }
+
 /* TYPE STYLES */
 
 p, div.messages, #content-main .views-row, ul, ol, .taxonomy-term-description {
-  margin-bottom: 1.5em;
+  margin: 0 0 1.53em 0;
   }
 
 #header h1, #header h2, #header p {
