--- a/sites/all/themes/openscholar/scholar_collector/scholar-collector.css
+++ b/sites/all/themes/openscholar/scholar_collector/scholar-collector.css
@@ -5,7 +5,7 @@ html {
 body {
     background: url(images/body-bg-no-sidebar.jpg) 50% 135px repeat-y #6d2a01;
     color:#666;
-    font:.9em/165% palatino, Baskerville, "palatino linotype", "Times New Roman", Times, Georgia, serif;
+    font-family: palatino, baskerville, "palatino linotype", "Times New Roman", Times, Georgia, serif;
     }
 
 body.sidebar-left {
