--- a/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
@@ -12,7 +12,7 @@ html {
 body {
     background-color: #44514f;
     color:#2F2F2F;
-    font:.9em/150% palatino, 'palatino linotype','times new roman', times, serif;
+    font-family: palatino, 'palatino linotype','times new roman', times, serif;
     }
 
 #wrapper {
