--- a/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
+++ b/sites/all/themes/openscholar/scholar_nortony/scholar-nortony.css
@@ -9,7 +9,7 @@
 body, #header, #footer, #wrapper {
     background: #2f341f;
     color:#37352B;
-    font:.9em/1.5em georgia, serif;
+    font-family: georgia, serif;
     }
 
 /* TYPOGRAPHY*/
