--- a/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
+++ b/sites/all/themes/openscholar/scholar_redhead/scholar-redhead.css
@@ -3,9 +3,8 @@ html {
     }
 
 body {
-    background: #fff;
     color:#353535;
-    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+    font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
 #wrapper {
