--- a/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
+++ b/sites/all/themes/openscholar/scholar_stripy/scholar-stripy.css
@@ -6,7 +6,7 @@ html {
 body {
     background: #bc613c;
     color:#282828;
-    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+    font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
 body.navbar-on {
