--- a/sites/all/themes/openscholar/scholar_weft/scholar-weft.css
+++ b/sites/all/themes/openscholar/scholar_weft/scholar-weft.css
@@ -7,7 +7,7 @@
 body {
     background: url(images/fabric-strip.jpg) repeat-y 50% 0 #39240c;
     color:#282828;
-    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+    font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
 
