--- a/sites/all/themes/openscholar/cp_theme/forms.css
+++ b/sites/all/themes/openscholar/cp_theme/forms.css
@@ -295,8 +295,6 @@ div.ctools-modal-content #ucreate-user-form .form-item label {
   width: auto;
   }
 
-
-
 form div.buttons {
   text-align: left;
   margin-left: 200px;
@@ -304,33 +302,15 @@ form div.buttons {
 
 /* CONTENT PAGES FILTERING AND UPDATING OPTIONS */
 
-/* Removing formating for now 9/28/09
-
-fieldset.vsite_content_filter_box {
-  float: left;
+html.js fieldset.collapsed {
+  height: 2em !important;
   }
-
-#views-bulk-operations-select {
-  position: absolute;
-  left:135px;
-  top:48px;
-  top: 3.7em;
-  }
-
-#views-bulk-operations-form--1 .views-node-selector {
-  clear: both;
-  }
-
-.vsite_content_bulk_update {
-  margin: 0;
-  }
-*/
 
 .vsite_content_filter_box .fieldset-wrapper, #views-bulk-operations-select .fieldset-wrapper {
   margin-left: 0;
-  margin-top: -6px;
+  margin-top: 0;
   font-size:0.8em;
-  padding:20px 20px 10px;
+  padding:1.5em 1.5em 1em;
   background: #EAEBE9;
   }
 
