--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -230,7 +230,7 @@ ul.links li {
   }
 
 .node ul.links li, .biblio-entry ul.links li {
-  padding-right: .5em;
+  padding-right: .5em !important;
   border-right:1px solid #ccc;
   }
 
