--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -411,6 +411,7 @@ body.header-right-main #header-wrapper {
   border: none;
   float: left;
   width: 408px;
+  font-size:1.1em;
   }
 
 #header #block-scholar_biocv-bio_blurb h3 {
