--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -695,8 +695,7 @@ table#attachments td.size {
 
 table#attachments td.file a,
 .biblio_file_links a {
-  text-indent: -999em;
-  background:url('/sites/all/modules/contrib/itweak_upload/images/mime-16.png') no-repeat scroll center -226px transparent;
+  text-indent: -999em; background:url('/sites/all/modules/contrib/itweak_upload/images/mime-16.png') no-repeat scroll center -226px transparent;
   height:22px;
   margin:0;
   min-height:22px;
@@ -708,6 +707,10 @@ table#attachments td.file a,
 
 .biblio_file_links a {
   display:inline-block;
+  }
+
+.biblio_file_links a:hover {
+  background-color: #ccc;
   }
 
 /* TAXONOMY */
