--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -1,49 +1,50 @@
 #block-iqss_gking-areas_of_research {
   width:100%;
   position: relative;
-  padding:13px 0 15px 0;
+  padding:0;
   border:1px solid #000;
   background: #333;
   color: #fff;
-  height:290px;
+  height:367px;
   clear:both;
   z-index:1;
   line-height: normal;
-  }
-
-#block-iqss_gking-areas_of_research h3.title, #block-iqss_gking-areas_of_research h4 {
-  font-weight: normal;
-  font:17px/25px helvetica, arial, sans-serif;
-  margin: 0;
-  background: transparent;
+  background: url(images/squiggly-arrow.png) 209px 71px no-repeat #555;
+  margin-bottom: 9px;
   }
 
 #block-iqss_gking-areas_of_research h3.title {
-  padding:0 20px 0 49px;
-  margin: 0;
-  color: #fff;
-  border:none;
+  margin: 0 0 25px 0;
+  padding: 13px 16px 16px 16px;
+  font: 600 17px/24px arial, helvetica, sans-serif;
+  letter-spacing:-0.05em;
+  text-indent:-1px;
   color:#ff8202;
-  background: url(images/black-arrow.png) 291px 50% no-repeat #333;
+  background: #222;
   }
 
 #block-iqss_gking-areas_of_research h4 {
-  color: #f6f6d0;
-  position: relative;
   color: #fff;
-  margin-bottom:0;
-  top: -25px;
+  margin-bottom:34px;
+  margin-top: 0;
+  font-weight: bold;
+  margin: 0 0 39x;
+  background: transparent;
+  font-size:16px;
+  line-height:25px;
+  }
+
+#block-iqss_gking-areas_of_research .col {
+  width: 236px;
   }
 
 #block-iqss_gking-areas_of_research #methods {
-    width:334px;
     text-align: right;
-    float: left;;
+    float: left;
     }
 
 #block-iqss_gking-areas_of_research #applications {
     float: right;
-    width:393px;
     }
 
 #block-iqss_gking-areas_of_research dd {
@@ -53,9 +54,9 @@
     min-height: 184px;
     padding: 14px 24px;
     border: 1px solid #db7002;
-    left:334px;
-    top: 57px;
-    background: #333;
+    left:230px;
+    top: 136px;
+    background: #555;
     text-align: left;
     line-height:1.35em;
     }
@@ -63,17 +64,18 @@
 #block-iqss_gking-areas_of_research dt {
     position:relative;
     font-weight: bold;
-    line-height: 22px;
+    line-height: normal;
+    margin-bottom:10px;
     }
 
 #block-iqss_gking-areas_of_research #methods dt span,
 #block-iqss_gking-areas_of_research #methods h4 {
-  margin-right: 63px;
+  margin-right: 31px;
   }
 
 #block-iqss_gking-areas_of_research #applications dt,
 #block-iqss_gking-areas_of_research #applications h4 {
-  padding-left:63px;
+  padding-left:34px;
   left: 0;
   }
 
@@ -82,15 +84,15 @@
   }
 
 #block-iqss_gking-areas_of_research dt.active {
-  background: url('images/line.png') no-repeat -341px 50% #333;
+  background: url('images/line.png') no-repeat -372px 50% #555;
   }
 
 #block-iqss_gking-areas_of_research #methods dt.active {
-  background-position: 276px 50%;
+  background-position: 211px 50%;
   }
 
 #block-iqss_gking-areas_of_research dt.active span {
-  background: #333;
+  background: #555;
   }
 
 #block-iqss_gking-areas_of_research dt span a, #block-iqss_gking-areas_of_research dt span a:visited {
