--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -199,6 +199,13 @@ a:hover {
   background: #fff;
   }
 
+.page-home #content {
+  background:transparent;
+  border: none;
+  padding-right: 0;
+  padding-left: 0;
+  }
+
 /*
 
 .column .region-count-1 {
@@ -218,8 +225,6 @@ a:hover {
   }
 
 */
-
-
 
 #header-left {
   right: 293px;
@@ -398,19 +403,19 @@ body.header-right-main #header-wrapper {
 /* FRONT PAGE ELEMENTS */
 
 #header #block-scholar_biocv-bio_blurb {
-  background: url(images/front-photo.jpg) 0 0 no-repeat transparent;
+  background: url('images/front-photo.jpg') 0 0 no-repeat transparent;
   position:relative;
-  padding-top:21px;
-  padding-left: 271px;
-  padding-right: 36px;
+  padding-top:56px;
+  padding-left: 353px;
+  padding-right: 79px;
   padding-bottom: 0;
-  height: 229px;
+  height: 195px;
   margin-top: -4px;
   margin-left: 0;
   margin-bottom: 8px;
   border: none;
   float: left;
-  width: 408px;
+  width: 552px;
   font-size:1.1em;
   }
 
@@ -421,13 +426,6 @@ body.header-right-main #header-wrapper {
 
 #header #block-scholar_biocv-bio_blurb .content {
   margin-top: 0;
-  }
-
-.page-home #header-wrapper .region-count-2 {
-  float: right;
-  width: 207px;
-  height: 219px;
-  overflow: auto;
   }
 
 .view-scholar-software-releases {
@@ -441,8 +439,9 @@ body.header-right-main #header-wrapper {
 
 /* Publications Tabs */
 
-.page-home #content-main #content {
+.page-home #content-main #pub_type_tabs {
   background:url(images/pubs-bg.png) repeat-x 0 0 #fff;
+  padding: 0 26px;
   }
 
 #pub_type_tabs h3.title {
