first attempt at bio animation

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -726,3 +726,31 @@ body.section-category .taxonomy-term-description {
 .taxonomy-term-child .taxonomy-term-child {
   padding-left: 3em;
   }
+
+
+/*FRONT PAGE BIO*/
+
+.page-home #node-3793 {
+  position: fixed;
+  background: #fff;
+  margin:0;
+  font-size: 1.1em;
+  bottom: 30px;
+  /*top: 200px;*/
+  width: 750px;
+  left:50%;
+  margin-left:-375px;
+  z-index:10;
+  -moz-box-shadow: 0 -1.6em 3em rgba(0,0,0,0.6);
+  display:none;
+  }
+
+.page-home #node-3793 .node-inner {
+   position:absolute;
+   overflow:auto;
+   bottom: 0;
+   left:40px;
+   top:40px;
+   right:10px;
+   padding-right:25px;
+   }
