--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -5,22 +5,23 @@
   border:1px solid #000;
   background: #333;
   color: #fff;
-  height:367px;
+  height:328px;
   clear:both;
   z-index:1;
   line-height: normal;
-  background: url(images/squiggly-arrow.png) 209px 71px no-repeat #555;
+  background: url(images/aoi-bg.png) 0 0 no-repeat #505050;
   margin-bottom: 9px;
   }
 
 #block-iqss_gking-areas_of_research h3.title {
-  margin: 0 0 25px 0;
+  margin: 0;
   padding: 13px 16px 16px 16px;
   font: 600 17px/24px arial, helvetica, sans-serif;
-  letter-spacing:-0.05em;
+  letter-spacing:0;
   text-indent:-1px;
   color:#ff8202;
-  background: #222;
+  background: transparent;
+  font-weight: normal;
   }
 
 #block-iqss_gking-areas_of_research h4 {
@@ -28,14 +29,16 @@
   margin-bottom:34px;
   margin-top: 0;
   font-weight: bold;
-  margin: 0 0 39x;
+  margin: 0 0 39px;
   background: transparent;
   font-size:16px;
   line-height:25px;
+  font-weight:normal;
   }
 
 #block-iqss_gking-areas_of_research .col {
-  width: 236px;
+  width: 279px;
+  margin-top: -39px;
   }
 
 #block-iqss_gking-areas_of_research #methods {
@@ -50,20 +53,19 @@
 #block-iqss_gking-areas_of_research dd {
     position:absolute;
     display:none;
-    width:208px;
+    width:163px;
     min-height: 184px;
-    padding: 14px 24px;
+    padding: 14px;
     border: 1px solid #db7002;
-    left:230px;
-    top: 136px;
-    background: #555;
+    left:279px;
+    top: 67px;
+    background: #505050;
     text-align: left;
     line-height:1.35em;
     }
 
 #block-iqss_gking-areas_of_research dt {
     position:relative;
-    font-weight: bold;
     line-height: normal;
     margin-bottom:10px;
     }
@@ -75,7 +77,7 @@
 
 #block-iqss_gking-areas_of_research #applications dt,
 #block-iqss_gking-areas_of_research #applications h4 {
-  padding-left:34px;
+  padding-left:59px;
   left: 0;
   }
 
@@ -84,18 +86,19 @@
   }
 
 #block-iqss_gking-areas_of_research dt.active {
-  background: url('images/line.png') no-repeat -372px 50% #555;
+  background: url('images/line.png') no-repeat -345px 50% #505050;
   }
 
 #block-iqss_gking-areas_of_research #methods dt.active {
-  background-position: 211px 50%;
+  background-position: 252px 50%;
   }
 
 #block-iqss_gking-areas_of_research dt.active span {
-  background: #555;
+  background: #505050;
   }
 
-#block-iqss_gking-areas_of_research dt span a, #block-iqss_gking-areas_of_research dt span a:visited {
+#block-iqss_gking-areas_of_research dt span a,
+#block-iqss_gking-areas_of_research dt span a:visited {
   color: #fff;
   }
 
@@ -103,6 +106,6 @@
   text-decoration: none;
   }
 
-#block-iqss_gking-areas_of_research dt.active a {
+#block-iqss_gking-areas_of_research dt.active span a {
   color:#e87702;
   }
