change more link

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -115,11 +115,11 @@ a:hover {
   background-position: 100% 0;
   }
 
-.more {
+a.more {
  font-weight: bold;
  text-decoration: none;
  font-size: 12px;
- letter-spacing: -1px;
+ letter-spacing: 0;
  color: #fff;
  padding: 0 10px;
  background: url(images/arrow-white.png) 100% 50% no-repeat transparent;
