more gary theme, thedata footer

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -125,6 +125,12 @@ a.more {
  background: url(images/arrow-white.png) 100% 50% no-repeat transparent;
   }
 
+#node-3793 a.more {
+  color: #5c7677;
+  float:right;
+  padding: 11px 38px 10px 0;
+  }
+
 .item-list .pager li {
   margin: 0;
   padding: 3px 9px;
@@ -741,7 +747,9 @@ body.section-category .taxonomy-term-description {
   left:50%;
   margin-left:-375px;
   z-index:10;
-  -moz-box-shadow: 0 -1.6em 3em rgba(0,0,0,0.6);
+  -moz-box-shadow: 0 -1em 3em rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 -1em 3em rgba(0,0,0,0.6);
+  box-shadow: 0 -1em 3em rgba(0,0,0,0.6);
   display:none;
   }
 
@@ -750,7 +758,7 @@ body.section-category .taxonomy-term-description {
    overflow:auto;
    bottom: 0;
    left:40px;
-   top:40px;
+   top:52px;
    right:10px;
    padding-right:25px;
    }
