--- a/sites/all/themes/custom/thedata/thedata.css
+++ b/sites/all/themes/custom/thedata/thedata.css
@@ -21,7 +21,7 @@ body.header-main #header-main {
 	}
 
 #footer {
-	background: transparent url(images/footer.png) no-repeat 0 0;
+	background: #909D9C url(images/footer.png) no-repeat 0 0;
 	}
 
 #header {
