clear-block added

--- a/sites/all/themes/openscholar/scholar_base/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/forms.css
@@ -6,7 +6,7 @@ div.form-item {
   padding:9px;
   }
 
-div.form-item, ul.links, div.admin-panel .body, .clear-block {
+div.form-item, ul.links, div.admin-panel .body {
   display:block;
   }
 
