--- a/sites/all/themes/openscholar/scholar_base/tabs.css
+++ b/sites/all/themes/openscholar/scholar_base/tabs.css
@@ -4,7 +4,23 @@
   float: none;
   margin: 0 0 10px 0;
   padding: 0;
+
 }
+
+.clear-block:after {
+  visibility: none;
+	font-size: 0.1em;
+	display: block;
+	line-height: 0;
+	height: 0.1px;
+  content: ".";
+	clear: both;
+	display:block;
+	}
+
+.tabs ul.primary, .tabs ul.secondary {
+  float:left;
+  }
 
 /* Primary */
 .tabs ul.primary {
@@ -58,8 +74,7 @@
 /* Secondary */
 .tabs ul.secondary {
   clear: both;
-  float: left;
-  margin: -10px 0 20px 0;
+  margin: 0 0 20px 0;
   padding: 0 10px;
   text-transform: lowercase;
   width: 100%;
