theming of book images

--- a/sites/all/themes/openscholar/scholar_base/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/biblio.css
@@ -247,3 +247,16 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
   padding-right: .4em;
   }
 
+.node-type-biblio img, .biblio-entry img {
+  border: 1px solid #777;
+  width:100%;
+  height: 100%;
+  }
+
+.biblio-entry .flL {
+  width: 60px;
+  }
+
+.biblio-entry ul.links {
+  clear:none;
+  }
