gary changes, scholar pubs

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -371,9 +371,8 @@ body.section-category .node {
   padding-right: 8px;
   }
 
-.page-home #sidebar-left {
-  width: 348px;
-  right: 356px;
+.page-home #sidebar-right {
+  width: 200px;
   }
 
 #sidebar-right {
@@ -390,7 +389,7 @@ body.section-category .node {
   }
 
 .page-home #content-wrapper {
-  padding-left: 356px;
+  padding-right: 208px;
   }
 
 body.header-left-main #header-wrapper {
@@ -698,8 +697,7 @@ table#attachments td.size {
   }
 
 
-table#attachments td.file a,
-.biblio_file_links a {
+table#attachments td.file a {
   text-indent: -999em; background:url('/sites/all/modules/contrib/itweak_upload/images/mime-16.png') no-repeat scroll center -226px transparent;
   height:22px;
   margin:0;
@@ -708,14 +706,6 @@ table#attachments td.file a,
   padding:0 7px;
   width:16px;
   display:block;
-  }
-
-.biblio_file_links a {
-  display:inline-block;
-  }
-
-.biblio_file_links a:hover {
-  background-color: #ccc;
   }
 
 /* TAXONOMY */
