--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -37,13 +37,14 @@
   }
 
 #block-iqss_gking-areas_of_research .col {
-  width: 279px;
+  width: 322px;
   margin-top: -39px;
   }
 
 #block-iqss_gking-areas_of_research #methods {
     text-align: right;
     float: left;
+    width:281px;
     }
 
 #block-iqss_gking-areas_of_research #applications {
@@ -53,7 +54,7 @@
 #block-iqss_gking-areas_of_research dd {
     position:absolute;
     display:none;
-    width:163px;
+    width:180px;
     min-height: 184px;
     padding: 14px;
     border: 1px solid #db7002;
@@ -63,6 +64,10 @@
     text-align: left;
     line-height:1.35em;
     }
+
+#block-iqss_gking-areas_of_research dd:nth-child(2) {
+  display:block;
+  }
 
 #block-iqss_gking-areas_of_research dt {
     position:relative;
