--- a/sites/all/themes/openscholar/scholar_base/toggle-slider.css
+++ b/sites/all/themes/openscholar/scholar_base/toggle-slider.css
@@ -19,7 +19,7 @@
 
 .toggle {
   background: url(images/show-menu.png) 100% 7px no-repeat transparent;
-  padding-right: 2.5em;
+  padding-right: 25px;
   }
 
 .toggle.expanded {
