--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -131,20 +131,17 @@ a.more {
   padding: 11px 38px 10px 0;
   }
 
-.item-list .pager li {
-  margin: 0;
-  padding: 3px 9px;
-  background: #6F6F6F;
+.block .item-list .pager {
+  background:#fff;
+  margin: 0 -16px -26px -16px;
+  padding: .5em 0;
+  border-top: 1px solid #E5E5E5;
   }
 
-.item-list .pager li a {
-  color: #fff;
+.block .item-list .pager li {
+  margin-bottom: 0;
   }
 
-.item-list .pager li.pager-current {
-  color: #000;
-  background: #DB7000;
-  }
 
 /* Secondary Menu */
 
