new version of gary front

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -2,68 +2,76 @@
   width:100%;
   position: relative;
   padding:0;
-  border:1px solid #000;
-  background: #333;
   color: #fff;
   height:328px;
   clear:both;
   z-index:1;
   line-height: normal;
-  background: url(images/aoi-bg.png) 0 0 no-repeat #505050;
+  background: url(images/leadsto-arrow.png) 50% 54px no-repeat #3f5353;
   margin-bottom: 9px;
+  border: none;
   }
 
 #block-iqss_gking-areas_of_research h3.title {
   margin: 0;
-  padding: 13px 16px 16px 16px;
-  font: 600 17px/24px arial, helvetica, sans-serif;
-  letter-spacing:0;
-  text-indent:-1px;
-  color:#ff8202;
-  background: transparent;
+  font-size: 1.56em;
+  line-height: 33px;
+  color:#fff;
+  background: url(images/aor-h3.png) 0 0 repeat-x #3f5353;
+  padding-top: 0;
+  padding-bottom: 0;
   font-weight: normal;
+  border: none;
+  height: 50px;
+  letter-spacing:0;
   }
 
 #block-iqss_gking-areas_of_research h4 {
-  color: #fff;
+  color: #68efde;
   margin-bottom:34px;
   margin-top: 0;
   font-weight: bold;
-  margin: 0 0 39px;
+  margin: 0 0 17px;
   background: transparent;
-  font-size:16px;
+  font-size:17px;
   line-height:25px;
   font-weight:normal;
   }
 
 #block-iqss_gking-areas_of_research .col {
-  width: 322px;
-  margin-top: -39px;
+  margin-top: 0;
   }
 
 #block-iqss_gking-areas_of_research #methods {
     text-align: right;
     float: left;
-    width:281px;
+    width:262px;
     }
 
 #block-iqss_gking-areas_of_research #applications {
     float: right;
+    width: 298px;
     }
 
 #block-iqss_gking-areas_of_research dd {
     position:absolute;
     display:none;
-    width:180px;
+    width:224px;
     min-height: 184px;
-    padding: 14px;
-    border: 1px solid #db7002;
-    left:279px;
-    top: 67px;
-    background: #505050;
+    padding: 5px 14px;
+    border-left: 2px solid #db7002;
+    left:262px;
+    top: 91px;
+    background: #3f5353;
     text-align: left;
     line-height:1.35em;
+    font-size:13px;
     }
+
+#block-iqss_gking-areas_of_research #applications dd {
+  border-left:none;
+  border-right: 2px solid #db7002;
+  }
 
 #block-iqss_gking-areas_of_research dd:nth-child(2) {
   display:block;
@@ -73,6 +81,7 @@
     position:relative;
     line-height: normal;
     margin-bottom:10px;
+    font-size: 13px;
     }
 
 #block-iqss_gking-areas_of_research #methods dt span,
@@ -88,18 +97,20 @@
 
 #block-iqss_gking-areas_of_research #applications dt span {
   display:block;
+  padding-left:0.5em;
+  text-indent:-0.5em;
   }
 
 #block-iqss_gking-areas_of_research dt.active {
-  background: url('images/line.png') no-repeat -345px 50% #505050;
+  background: url('images/line.png') no-repeat 0 50% #3f5353;
   }
 
 #block-iqss_gking-areas_of_research #methods dt.active {
-  background-position: 252px 50%;
+  background-position: 236px 50%;
   }
 
 #block-iqss_gking-areas_of_research dt.active span {
-  background: #505050;
+  background: #3f5353;
   }
 
 #block-iqss_gking-areas_of_research dt span a,
